--- a/gb/25/12/5/n14649595.md
+++ b/gb/25/12/5/n14649595.md
@@ -1,69 +1,76 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>香港大火 灾民回家取物品伤感：40年心血没了</h2>
+<tr><td VALIGN=TOP width="626"><h2 align=center>港大火灾民重回宏福苑 叹“40年心血没了”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649598-01-600x400.jpg" />
 <h6>有宏志阁居民3日带行李箱和帆布袋回家取回物品。（霄龙／大纪元）</h6>
 <hr>
-	<p>【大纪元2025年12月05日讯】（大纪元记者吴锐略、张瑛瑜香港报导）香港上周三（11月26日）发生大火的宏福苑正被封锁，大火中未受到波及的宏志阁，警方让居民3日和4日可回家一次，以取回个人物品，每户限两人同时上楼，逗留最多一个半小时。3日早陆续有居民到场登记然后上楼。</p>
-<p>有居民对大纪元表示，多名家人住宏福苑，弟妇罹难，返回住又要面对好多伤感；有老妇叹，四十几年心血没了；也有灾民批评政府及议员纵容劣质工程，导致“用最贵的价钱，用最廉价的料”。有灾民家属认为，即使日后重建，全部8座居民都不愿再回原址。</p>
-<h2>黄小姐伤感：多名家人住宏福苑 弟妇罹难</h2>
-<p>大埔宏福苑大火唯一没有被火势波及的宏志阁，居民在3、4日获准陆续返家取回贵重物品。另外有其它大厦的居民返回宏福苑视察。</p>
-<p>宏志阁居民黄小姐昨（4日）返回家中，取走婴儿车、小朋友的书包、功课、笔袋，及衣物与贵重物品。她对大纪元表示，非常喜欢宏福苑，多名家人原本均在宏福苑居住，遍布5个单位，3个在宏志阁、2个在宏泰阁，“没想到会变成这个情况”，整个家庭都受影响。</p>
-<p>她透露，罹难的孖妹其中一人是其弟妇，非常难过，但强调家人会一条心，行未来的路。</p>
-<p>黄小姐在亲戚家中暂住，被问到为何不入住政府提供的安置房屋，她认为获安排的在元朗、粉岭“唔近，好唔方便”，尽量想快点稳定，亦想小朋友快点适应正常的社会秩序。</p>
-<p>在大埔土生土长三十多年的她称，希望在区内居住，不过对于是否仍然住在宏志阁，她心情矛盾：“真系好难讲。如果返回住又要面对好多伤感，但如果不回来住，我们的资产就在那间屋里，那间屋会怎样处理，其实都要看政府”。被问到全屋苑万一拆卸重建，是否希望包括宏志阁，她说“都是会想的，因为就剩一栋在那里其实没什么意思”。</p>
+	<p>【大纪元2025年12月05日讯】（大纪元记者吴锐略、张瑛瑜香港报导）上周三（11月26日）发生大火的香港宏福苑还在被封锁中，仅大火中未受到波及的宏志阁居民获准3日和4日回家取个人物品，但回家的人数和时间被限制。</p>
+<p>有家人罹难的居民对大纪元表示，返回住所又要面对好多伤感；有老妇叹，四十几年心血没了；也有灾民批评政府及议员纵容劣质工程；有灾民家属认为，即使日后重建，也不愿再回原址。</p>
+<h2>黄小姐伤感：资产就在宏福苑那间屋里</h2>
+<p>大埔宏福苑大火唯一没有被火势波及的宏志阁，居民在3、4日陆续返家取回贵重物品。也有其它大厦的居民则返回宏福苑了解情况。</p>
+<p>宏志阁居民黄小姐昨（4日）返回家中，取走婴儿车、小朋友的书包、功课、笔袋，及衣物与贵重物品。她对大纪元表示，非常喜欢宏福苑，多名家人原本均在宏福苑居住，有5个单位，3个在宏志阁、2个在宏泰阁。</p>
+<p>她透露，罹难的姊妹中，一人是其弟妇，非常难过，“没想到会变成这个情况”，整个家庭都受影响。但家人会一条心，走好未来的路。</p>
+<p>目前，黄小姐在亲戚家中暂住，没有住政府提供的安置房屋。她说，她家被安排在元朗、粉岭，“不近，很不方便”。现在想尽量快点稳定，也希望小孩快点适应新环境。</p>
+<p>在大埔土生土长三十多年的她说，是否仍然住在宏志阁，她心情矛盾：“真的是很难说。如果回去住又要面对很多伤感；但如果不回去住，我们的资产就在那间屋里。”</p>
+<p>她说：“那间屋会怎样处理，其实也要看政府。”</p>
+<p>被问到全屋苑万一拆卸重建，或许会包括宏志阁，她说，“都是会想的，因为就剩一栋在那里其实没什么意思。”</p>
 <h2>老妇：四十几年心血没了 孩子也什么都没有了</h2>
-<p>住在宏道阁、七十多岁的陈太昨（4日）与丈夫返回宏福苑。她对大纪元说，她的家庭在宏福苑有3个单位，大小儿子分别住在宏盛阁、宏志阁。</p>
-<p>她多晚来无办法睡，“自己四十几年心血没有了，我什么都没有了，我孩子什么都没有了，仲要供（单位）200多万（元）”。她说街坊间有感情，大埔环境亦好，希望政府协助居民在大埔重建家园，她并感谢政府及社会各界支援。</p>
-<p>她忆述大火当日正在大陆上班。当时媳妇先在宏盛阁见到起火，就带其女儿及外佣下楼，并致电家翁（陈太丈夫）告知火警。陈太引述丈夫当日目击火势蔓延，感到崩溃。</p>
-<p>另外，其读小五的孙女准备升中，但多年来的奖状、考试证书，所有能帮助升学的东西，亦可能化为乌有。</p>
-<figure id="attachment_14649599" aria-describedby="caption-attachment-14649599" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649599-02.jpg"><img decoding="async" class="size-large wp-image-14649599" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649599-02-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649599" class="wp-caption-text">有宏志阁居民3日有居民带行李箱和帆布袋回家取回物品。（霄龙／大纪元）</figcaption></figure>
+<p>七十多岁的陈太住在宏道阁，昨（4日）与丈夫返回宏福苑。她对大纪元说，她的家庭在宏福苑有3个单位，大儿子和小儿子分别住在宏盛阁、宏志阁。</p>
+<p>陈太已经有很多个晚上无法入睡，“自己四十几年心血没有了，我什么都没有了，我孩子什么都没有了。（其所住单位）还要供200多万（元）”。她说，街坊间有感情，大埔环境亦好，希望政府协助居民在大埔重建家园，她并感谢政府及社会各界支援。</p>
+<p>她忆述，大火当日她正在大陆上班。当时媳妇先在宏盛阁见到起火，就带着女儿及外佣下楼，并致电陈太丈夫告知火警。陈太引述丈夫当日目击火势蔓延的情况，感到崩溃。</p>
+<p>她说，读小学五年级的孙女正准备升中学，但多年来的奖状、考试证书等所有能帮助升学的东西都可能化为灰烬。</p>
+<figure id="attachment_14649599" aria-describedby="caption-attachment-14649599" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649599-02.jpg"><img decoding="async" class="size-large wp-image-14649599" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649599-02-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649599" class="wp-caption-text">宏志阁居民3日带行李箱和帆布袋回家取回物品。（霄龙／大纪元）</figcaption></figure>
 <figure id="attachment_14649602" aria-describedby="caption-attachment-14649602" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649602-03.jpg"><img decoding="async" class="size-large wp-image-14649602" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649602-03-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649602" class="wp-caption-text">有居民3日回家取回物品后离开。（霄龙／大纪元）</figcaption></figure>
-<h2>选举如期举行 灾民家属：在痛苦上踩多一脚 不愿回原址居住</h2>
-<p>灾民家属孙先生本身并非住在宏福苑，但他的73岁父亲火灾时独自在家，由邻居通知后逃生，目前已被安排至元朗八乡附近的七星湖的过渡性房屋。父亲对该区完全不熟悉，孙先生形容该区“什么都没有”，但有社工支援。</p>
-<p>他3日对大纪元说，情绪方面，其父亲在灾后首两天较差，之后安顿后好转，“他好一点”。孙先生亦有朋友及旧同学受火灾影响，一名行动不便的旧同学母亲被消防员救出，已经出院。</p>
-<p>孙先生还提及火灾前大厦管理情况，经常贴通告催交（大维修）费用，他父亲已支付最后一期费用，总共交了18万。孙先生又希望政府能公正调查火警原因，因为一直以来实在太多包庇，让整个社会都对政府感到很失望。</p>
-<p>他认为，宏福苑全部8座的居民都不愿意返回原址居住，因会加剧心灵伤痛，“心灵上比身体上面的伤痛很大”。对老人家而言，重建需时，“可能等不到”。</p>
-<p>对于上届法团顾问、民建联区议员黄碧娇声称会报警指控新立法团，孙先生直斥“贼喊捉贼”，指黄碧娇在宏福苑多年来“搞了很多事”，以前有民主党制衡，但现在基本上只有民建联，“基本上无得拣，根本就没有选择给人”。谈及新立法团，孙先生认为感觉上“比较实干”，会在不公不义处发声。</p>
-<p>关于政府呼吁灾民在立法会选举中投票，他批评政府可能在伤害所有灾民，“在他们的痛苦上面踩多一脚”，并指选举对灾情无帮助。</p>
-<p>他又对政府成立的“独立检讨委员会”表示疑虑，指该委员会报告给特首，缺乏第三方监察，“特首其实可以全权话事，好难有一个第三者角色去监察委员会”，建议更多专业人士参与。</p>
-<h2>灾民批政府议员纵容</h2>
-<p>灾民余先生在接受本报记者访问时，形容政府和立法会议员纵容承建商，导致“用最贵的价钱，用最廉价的料”。他忆述当年有议员支持该承建商，并透过“拍门”方式向长者住户收集授权书及签名，令工程顺利通过，特别是黄碧娇等人。</p>
-<p>对于黄碧娇声称打算举报新一届业主立案法团，余先生无奈地回应称，现在都不知情况怎样，唯有等待政府善后。他提到，工程承办商曾承诺9月竣工，但至今仍未完成，业主已缴付大部分款项，仅余一期未收。</p>
-<p>另外，余先生曾投诉宏昌阁后巷长期堆满杂物，像“发泡胶仓库”，曾向相关部门投诉但不获处理。@</p>
+<h2>灾民家属：选举如期举行?在痛苦上再踩一脚</h2>
+<p>灾民家属孙先生本身并非住在宏福苑，但他的73岁父亲火灾时独自在家，得到邻居通知后逃生，目前已被安排至元朗八乡附近的七星湖过渡性房屋。</p>
+<p>孙先生3日对大纪元说，该区“什么都没有”，父亲对该区完全不熟悉，但有社工支援。父亲的情绪在灾后前两天较差，安顿好之后开始好转。</p>
+<p>他说，大厦管理人员经常贴通告催交（大维修）费用，他父亲已支付了最后一期费用，总共交了18万。</p>
+<p>孙先生有多个朋友及老同学家受火灾影响。一个老同学的妈妈行动不便，被消防员救出，现在已经出院。</p>
+<p>他认为，宏福苑全部8座的居民大多都不愿意返回原址居住，因会加剧心灵伤痛，“心灵上比身体上面的伤痛很大”。对老人家而言，重建需要时间，“可能等不到”。</p>
+<p>孙先生希望政府能公正调查火警原因，因为一直以来实在太多包庇，让整个社会都对政府感到很失望。</p>
+<p>对于上届法团顾问、民建联区议员黄碧娇声称会报警指控新立法团，孙先生直斥“贼喊捉贼”，指黄碧娇在宏福苑多年来“搞了很多事”，以前有民主党制衡，但现在基本上只有民建联，“基本上没有得选，根本就没有给人选择的机会”。</p>
+<p>谈及新立法团，孙先生认为感觉上“比较实干”，会在不公不义的地方发声。</p>
+<p>关于政府呼吁灾民在立法会选举中投票，他批评道，政府可能在伤害所有灾民，“在他们的痛苦上面再踩一脚”，并指选举对灾情无帮助。</p>
+<p>他又对政府成立的“独立检讨委员会”表示疑虑，该委员会报告给特首，缺乏第三方监察，“特首其实全权说了算，很难有一个第三方角色去监督委员会”。他建议有更多专业人士参与。</p>
+<h2>灾民批政府和议员纵容承建商</h2>
+<p>灾民余先生在接受本报记者采访时，形容政府和立法会议员纵容承建商，导致“用最贵的价钱，用最廉价的料”。</p>
+<p>他回忆道，当年有议员支持该承建商，并透过“敲门”方式向老人住户收集授权书及签名，令工程顺利通过，比如黄碧娇等人。</p>
+<p>对于黄碧娇声称打算举报新一届业主立案法团，余先生无奈地回应说，现在都不知情况怎样，唯有等待政府善后。</p>
+<p>他提到，工程承办商曾承诺9月竣工，但至今仍未完成，业主已缴付大部分款项，仅余一期未收。</p>
+<p>另外，余先生曾投诉宏昌阁后巷长期堆满杂物，例如“发泡胶仓库”，曾向相关部门投诉但不获处理。@</p>
 <figure id="attachment_14649604" aria-describedby="caption-attachment-14649604" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649604-04.jpg"><img decoding="async" class="size-large wp-image-14649604" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649604-04-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649604" class="wp-caption-text">有居民3日回家取回物品后离开。（霄龙／大纪元）</figcaption></figure>
 <figure id="attachment_14649605" aria-describedby="caption-attachment-14649605" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649605-05.jpg"><img decoding="async" class="size-large wp-image-14649605" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649605-05-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649605" class="wp-caption-text">有居民3日回家取回物品后离开。（霄龙／大纪元）</figcaption></figure>
 <figure id="attachment_14649606" aria-describedby="caption-attachment-14649606" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14649606-06.jpg"><img decoding="async" class="size-large wp-image-14649606" src="https://i.epochtimes.com/assets/uploads/2025/12/id14649606-06-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14649606" class="wp-caption-text">政府安排车队的士和客货车在现场提供义载服务。（霄龙／大纪元）</figcaption></figure>
 <p>责任编辑：孙芸#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/15/n10394634.md#1" target="_blank">共产暴政录：抢教堂庙宇的献堂献庙</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/6/17/n3896170.md#1" target="_blank">与同事的对话：法轮功没有政治诉求</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/1/n14472598.md#1">【品读唐诗】登高秋望 吟成古今第一七言律</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642446.md#1">【未解之谜】中共官员死而复活 带回冥界惊人信息</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14636773.md#1">小雪节气天气上升地气下降  不要掉以轻心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/10/n14632971.md#1">他动一念 数十年修行前功尽弃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630165.md#1">【古道人生】坠水失踪二十年 原来去了桃花源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643782.md#1">【重播】奥林匹亚冬季奥运圣火点燃仪式</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643825.md#1">【新闻大破解】与那国部署飞弹 美日联手护台？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643796.md#1">【直播】万斯副总统与军人共庆感恩节并讲话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642260.md#1">15国发联合声明 关注中共严重侵犯人权行为</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642815.md#1">六四“抗命将军”徐勤先6小时庭审录像曝光</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642317.md#1">川普和习近平通话 双方声明有何不同</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642470.md#1">舒淇结婚近十年仍无缘生子 冯德伦暖心回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643160.md#1">郑伊健日本演唱会突然取消 原因令人傻眼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643025.md#1">任达华新片大陆上映 9天总票房不足60万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/23/n14641293.md#1">唐嫣现身罗晋父亲告别式 破两人婚变传言</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642415.md#1">日本人气女团松村沙友理受访 大赞高市早苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642715.md#1">为何汽车后方挡风玻璃上有橘色的线条？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14643083.md#1">洗衣洗不掉汗臭和污渍？ 这样洗衣轻松搞定</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643410.md#1">出国旅行 当心护照因为这个原因不能使用</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/25/n14642590.md#1">应该先刷牙还是先用漱口水？ 让牙医告诉你</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642041.md#1">在冬天应该提早吃晚餐吗？ 专家释疑</a></li>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/5/n14649595.htm">香港大火 灾民回家取物品伤感：40年心血没了</a></p><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647110.md#1">奇异救赎——这世上另一个我</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651624.md#1">【佳音时刻】中共官场太荒诞 问责不误升官</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651951.md#1">【军事情报局】东南亚爆发战争 泰国攻入柬埔寨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651982.md#1">【重播】泰国联合工作组开记者会 泰柬边境局势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/12/5/n14649595.htm">港大火灾民重回宏福苑 叹“40年心血没了”</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649595.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
